Fixed bug where Contact would show up on a new line on mobile (i hope)

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ header a:hover
 {
   float:left;
   text-align:center;
-  width:30%;
+  width:28%;
   padding:10px;
 }
 
@@ -190,7 +190,7 @@ footer
   {
     float:none;
     text-align:center;
-    width:100%;
+    width:96%;
   }
 
   header
